@@ -109,6 +109,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Added action=edit
 * (bug 11401) Added xmldoublequote to xml formatter
 * Added rvsection parameter to prop=revisions to allow fetching the content of a certain section only
+* Introduced list=allimages
+* (bug 13371) Build page set from image hashes
+* Mark non-existent messages in meta=allmessages as missing
 
 === Languages updated in 1.13 ===
 
